<resources>
    <string name="app_name">APP</string>
    <string name="tab_1">首页</string>
    <string name="tab_2">分类</string>
    <string name="tab_3">柠檬VC</string>
    <string name="tab_4">购物车</string>
    <string name="tab_5">我的</string>
    <string name="net_error">网络错误！</string>
    <string name="store_name">柠檬自营</string>
    <string name="store_server">柠檬服务</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods">商品</string>
    <string name="evaluate">评价</string>
    <string name="review_evaluate">追评</string>
    <string name="goods_info">详情</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="money">￥298</string>
    <string name="pay_info">252人付款</string>
    <string name="todo">TODO</string>
    <string name="name">首先试一下默认的的效,布局文件如下activity_main_2.xml</string>
    <string name="skip">3 跳过</string>
    <string name="loading">数据操作中.....</string>
    <string name="more">更多</string>
    <string name="guess">猜你喜欢</string>
    <string name="del_success">删除成功</string>
    <string name="del_failed">删除失败</string>
    <string name="in_shop">进入商城</string>
    <string name="login_reg">登录/注册</string>
    <string name="balance">余额</string>
    <string name="red_packet">红包</string>
    <string name="all_order">全部订单</string>
    <string name="look_all_order">查看全部订单</string>
    <string name="no_pay">待付款</string>
    <string name="delivery">待发货</string>
    <string name="received">待收货</string>
    <string name="evaluated">待评价</string>
    <string name="return_change_goods">退/换货</string>
    <string name="collection">我的收藏</string>
    <string name="integral">我的积分</string>
    <string name="address">我的地址</string>
    <string name="browse">我的足迹</string>
    <string name="browse_error">不踏出第一步，怎知东西好不好？</string>
    <string name="personal_info">个人信息</string>
    <string name="problem">遇到问题？</string>
    <string name="pass_login">密码登录</string>
    <string name="qrcode_login">验证码登录</string>
    <string name="logout">退出登录</string>
    <string name="is_logout">确定退出登录吗?</string>
    <string name="personal_center">个人中心</string>
    <string name="zero_money">0元</string>
    <string name="zero">0</string>
    <string name="phone_reg">手机号注册</string>
    <string name="phone">手机号</string>
    <string name="phone_login">手机号登录</string>
    <string name="qrcode">验证码</string>
    <string name="get_qrcode">获取验证码</string>
    <string name="password">密码</string>
    <string name="register">立即注册</string>
    <string name="login">登录</string>
    <string name="other_login">其他方式登录</string>
    <string name="email">邮箱</string>
    <string name="email_login">邮箱登录</string>
    <string name="pass_tip">密码(长度建议在6-16位，请牢记你的密码)</string>
    <string name="agree">我同意</string>
    <string name="service">"服务条款"</string>
    <string name="and">和</string>
    <string name="policies">"隐私权相关政策"</string>
    <string name="no_order">您还没有相关的订单</string>
    <string name="no_goods">您还没有相关的商品</string>
    <string name="no_evaluate">您还没有相关的评价</string>
    <string name="no_search">没有搜索到相关商品，柠檬会尽快上架！</string>
    <string name="want_to_buy">可以去看看哪些想买的</string>
    <string name="buy_immediately">立即去购买</string>
    <string name="order_list">订单列表</string>
    <string name="order_detail">订单详情</string>
    <string name="all_order_list">全部</string>
    <string name="no_pay_order">待付款</string>
    <string name="no_ship_order">待发货</string>
    <string name="no_sign_order">待收货</string>
    <string name="no_evaluate_order">待评价</string>
    <string name="app_user">手机用户专享</string>
    <string name="goods_name">柠檬</string>
    <string name="goods_price">￥00.0</string>
    <string name="goods_market">￥100.0</string>
    <string name="rmb">￥</string>
    <string name="discount">优惠￥0.0</string>
    <string name="goods_num">×1</string>
    <string name="goods_nums">1</string>
    <string name="total">合计:</string>
    <string name="to_pay">去结算</string>
    <string name="cancel_order">取消订单</string>
    <string name="buy_again">再次购买</string>
    <string name="take_goods">确认收货</string>
    <string name="look_express">查看物流</string>
    <string name="user_evaluate">我要评价</string>
    <string name="publish_evaluate">发表评价</string>
    <string name="evaluate_content">给你购买的商品来个好评！！</string>
    <string name="sale_after">售后</string>
    <string name="edit">编辑</string>
    <string name="over">完成</string>
    <string name="add_item">添加</string>
    <string name="cart">购物车</string>
    <string name="server">客服</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy">立即购买</string>
    <string name="select_all">全选</string>
    <string name="taxation">包含税费￥0.00</string>
    <string name="collection_goods">收藏商品</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="delete_goods">删除商品</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="find_similarity">找相似</string>
    <string name="i_want_collection">我要收藏</string>
    <string name="no_collection">亲，您藏品太空了</string>
    <string name="delete">删除</string>
    <string name="is_delete">确定要删除吗?</string>
    <string name="is_confirm_take_order">是否确认收货?</string>
    <string name="category">分类</string>
    <string name="hot_sale">热销榜</string>
    <string name="Include_tax">包税</string>
    <string name="tax">税率:</string>
    <string name="Include_ship">包邮</string>
    <string name="Include_discount">优惠</string>
    <string name="ship_free">运费</string>
    <string name="ship_to">配送至</string>
    <string name="explain">说明</string>
    <string name="home">首页</string>
    <string name="msg">消息</string>
    <string name="defualt">默认</string>
    <string name="save">保存</string>
    <string name="add_address">添加新地址</string>
    <string name="no_address">您现在还没有收货地址，请尽快添加</string>
    <string name="user_name">收货人姓名（请使用真实姓名）</string>
    <string name="phone_num">手机号码</string>
    <string name="area">所在地区</string>
    <string name="location">地区</string>
    <string name="address_info">街道、小区门牌等详细信息</string>
    <string name="tip">提示</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>
    <string name="cancel">取消</string>
    <string name="logo_title">头像</string>
    <string name="logo_subtitle">修改头像</string>
    <string name="nick_title">昵称</string>
    <string name="nick_subtitle">未设置昵称</string>
    <string name="sex_title">性别</string>
    <string name="sex_subtitle">未设置性别</string>
    <string name="account_title">账号管理</string>
    <string name="account_subtitle">其他登录方式</string>
    <string name="phone_title">我的手机号</string>
    <string name="phone_subtitle">修改手机号</string>
    <string name="real_title">我的实名认证</string>
    <string name="real_subtitle">未认证</string>
    <string name="real_subtitle_o">已认证</string>
    <string name="interested_title">感兴趣的类别</string>
    <string name="interested_subtitle">未设置类别</string>
    <string name="all_photo">所有照片</string>
    <string name="camera_photo">拍摄照片</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="phone_account">手机账号</string>
    <string name="phone_bind">绑定手机账号</string>
    <string name="email_account">邮箱账号</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="bind">已绑定</string>
    <string name="no_bind">未绑定</string>
    <string name="now_bind">立即绑定</string>
    <string name="change_phone">更换手机号</string>
    <string name="main_account">我的主账号</string>
    <string name="reminder1">依 《网络安全法》 相关要求以及为了您的账号安全，请您绑定手机号</string>
    <string name="card_info">身份信息(必填)</string>
    <string name="card_name">您的真实姓名</string>
    <string name="card_num">您的身份证号码(加密处理)</string>
    <string name="card">身份证正反面(必填)</string>
    <string name="why">为什么需要实名认证</string>
    <string name="reminder">温馨提示:请上传原始比例的身份证正反面，请勿涂改裁剪，保证身份证信息清晰显示，否则无法通过审核</string>
    <string name="examples">示例</string>
    <string name="no_submit">未上传</string>
    <string name="examine">审核中</string>
    <string name="examine_adopt">审核通过</string>
    <string name="examine_adopt_no">审核未通过</string>
    <string name="comprehensive">综合</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="new_product">新品</string>
    <string name="filter">筛选</string>
    <string name="recommend">推荐</string>
    <string name="max_price">最高价格</string>
    <string name="min_price">最低价格</string>
    <string name="now_search">最近搜索</string>
    <string name="now_search_history">无搜索历史</string>
    <string name="hot_keywords">热门搜索</string>
    <string name="change">换一换</string>
    <string name="commonly_used_cate">常用分类</string>
    <string name="num">数量:</string>
    <string name="consignee">收件人：</string>
    <string name="collect_address">收货地址：</string>
    <string name="order_id">订单号:</string>
    <string name="pay_type">付款方式</string>
    <string name="real_pay">实付款:</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechatpay">微信支付</string>
    <string name="goods_total">商品总金额</string>
    <string name="pay_total">应付金额</string>
    <string name="pay_amount">付款金额</string>
    <string name="other_amount">不退金额(包括邮费等其他费用)</string>
    <string name="refund_amount">实际退款金额</string>
    <string name="tax_fee">税费</string>
    <string name="now_pay">立即支付</string>
    <string name="pay">支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="back_home">返回首页</string>
    <string name="you_like">猜你喜欢</string>
    <string name="message_center">消息中心</string>
    <string name="coupons">优惠券</string>
    <string name="yes_coupons">可用优惠券</string>
    <string name="no_coupons">不可用优惠券</string>
    <string name="no_use_coupons">没有可用优惠券</string>
    <string name="bonus">红包</string>
    <string name="select">选择</string>
    <string name="no_partake">不参与</string>
    <string name="apply_return_goods">申请退货</string>
    <string name="apply_refound">申请退款</string>
    <string name="shipping_sn">提交运单</string>
    <string name="no_apply">商家拒绝，重新申请</string>
    <string name="returning_goods">商品退回中</string>
    <string name="feedback">等待平台反馈</string>
    <string name="feedback_refound">等待平台退款</string>
    <string name="after_sale_over">售后处理完成</string>
    <string name="refund_over">退款处理完成</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="check_info">查看详情</string>
    <string name="server_tip">添加微信可以更好的了解你所购买的产品的来源！！</string>
    <string name="faat">促销活动</string>
    <string name="faat_center">活动中心</string>
    <string name="is_over">已结束</string>
    <string name="is_start">未开始</string>
    <string name="second_kill">限时秒杀</string>
    <string name="buy_kill">立即秒杀</string>
    <string name="group_buy">限时团购</string>
    <string name="team">拼团购</string>
    <string name="team_buy">我要开团</string>
    <string name="team_price">拼团价格</string>
    <string name="brand_center">品牌</string>
    <string name="into_brand">进入品牌</string>
    <string name="img_text_info">图文详情</string>
    <string name="product_parameters">产品参数</string>
    <string name="return_cause">退货原因</string>
    <string name="return_type">退货类型</string>
    <string name="return_repair">维修</string>
    <string name="return_goods">退货</string>
    <string name="change_goods">换货</string>
    <string name="refund_only">仅退款</string>
    <string name="return_goods_img">退换货原因图片</string>
    <string name="return_brief">退货原因描述</string>
    <string name="ship_name">快递公司</string>
    <string name="ship_no">快递单号</string>
    <string name="logistics_info">查看物流</string>
    <string name="logistics_track">物流跟踪</string>
    <string name="goods_rank">商品描述:</string>
    <string name="service_rank">服务描述:</string>
    <string name="shipping_rank">物流描述:</string>
    <string name="good_comment">好评</string>
    <string name="middle_comment">中评</string>
    <string name="bad_comment">差评</string>
    <string name="comment_no_empty">"评论不能为空!"</string>
</resources>