<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_e"
    android:orientation="vertical"
    android:paddingTop="3dp"
    android:paddingBottom="3dp">

    <LinearLayout
        android:id="@+id/item_goods_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_img_recyclerview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/empty" />

        <TextView
            android:id="@+id/item_title_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:gravity="start"
            android:lines="2"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/item_money_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:text="@string/money"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_sub_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:paddingStart="10dp"
                android:text="@string/pay_info"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>