<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/nav_header"
        layout="@layout/navigation_header_view_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView257"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/reminder1"
        android:textColor="@color/black_29"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_header" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/shape_edit_gray"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView257"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_edit_gray"
        android:ems="10"
        android:hint="@string/qrcode"
        android:inputType="number"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText16"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView258"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_qrcode"
        android:gravity="center_vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:text="@string/get_qrcode"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText16"
        app:layout_constraintEnd_toEndOf="@+id/editText16"
        app:layout_constraintTop_toTopOf="@+id/editText16"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView259"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/now_bind"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:background="@drawable/shape_60_gray"
        app:layout_constraintEnd_toEndOf="@+id/editText18"
        app:layout_constraintStart_toStartOf="@+id/editText18"
        app:layout_constraintTop_toBottomOf="@+id/editText18" />


</android.support.constraint.ConstraintLayout>