<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_data"
    android:layout_width="match_parent"
    android:background="@drawable/top_border"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView107"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/goods_price"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView107"
        app:layout_constraintStart_toEndOf="@+id/textView105"
        app:layout_constraintTop_toTopOf="@+id/textView107" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:text="@string/to_pay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>